--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         </nav>
         <div>
         	<a href="tel:+79333333333">+7 903 333-33-33</a>
-
+выберите способ доставки
             <button>Заказать звонок</button>
         </div>
     </header>
 </body>
 </html>
+добавили здесь каку-то кнопку
+и еще чего-то добавили
