--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <script src='js/main.js'></script>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="#portfolio">Портфолио</a>
-            <a href="#contacts">Контакты</a>
+    <header
         </nav>
         <div>
         	<a href="tel:+79333333333">+7 903 333-33-33</a>
